--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card",
+  "name": "swf-ui-kit-react",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
