--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,11 @@
       "runtime": "automatic"
     }]
   ],
-  "plugins": [["@babel/plugin-transform-react-jsx", {"runtime": "automatic"}]]
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", {
+      "legacy": true
+    }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true}],
+    ["@babel/plugin-transform-react-jsx", {"runtime": "automatic"}]
+  ]
 }
