--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-link": "^1.2.14",
+    "apollo-link-batch-http": "^1.2.14",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.6",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
