--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
       "legacy": true
     }],
     ["@babel/plugin-proposal-class-properties", { "loose": true}],
-    ["@babel/plugin-transform-react-jsx", {"runtime": "automatic"}]
+    ["@babel/plugin-transform-react-jsx", {"runtime": "automatic"}],
+    ["babel-plugin-styled-components"]
   ]
 }
