--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "watch": "babel --watch src --out-dir lib --source-maps inline --copy-files",
@@ -25,6 +26,7 @@
     "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
+    "babel-plugin-styled-components": "^1.12.0",
     "cross-fetch": "^3.0.6",
     "cssnano": "^4.1.10"
   }
