feat: Global Generate Library with source map

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "watch": "babel --watch src --out-dir lib --source-maps inline --copy-files",
-    "build": "babel src --out-dir lib --source-maps inline --copy-files"
+    "build": "babel src --out-dir lib --source-maps true --copy-files"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
