--- a/package.json
+++ b/package.json
@@ -3,21 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
-    "lodash": "^4.17.20",
-    "@babel/core": "^7.12.16",
-    "@babel/plugin-proposal-class-properties": "^7.12.13",
-    "@babel/plugin-proposal-decorators": "^7.12.13",
-    "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@babel/plugin-transform-react-jsx": "^7.12.16",
-    "@babel/preset-env": "^7.12.16",
-    "@babel/preset-react": "^7.12.13",
-     "babel-plugin-styled-components": "^1.12.0"
+    "lodash": "^4.17.20"
+  },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "watch": "babel --watch src --out-dir lib --source-maps inline --copy-files",
