--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "mobx": "^6.1.7",
+    "mobx-react-lite": "^3.2.0"
   },
   "peerDependencies": {
     "react": "^17.0.1",
