--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
-    "lodash": "^4.17.20",
-    "mobx": "^6.1.7",
-    "mobx-react-lite": "^3.2.0"
+    "lodash": "^4.17.20"
   },
   "peerDependencies": {
     "react": "^17.0.1",
