--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.0",
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
+    "babel-plugin-styled-components": "^1.12.0",
     "cssnano": "^4.1.10",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "babel-plugin-styled-components": "^1.12.0"
+    "react-dom": "^17.0.1"
   }
 }
