--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "autosize": "^4.0.2",
+    "ckeditor5": "git+https://github.com/oleksandr-oliinyk/ckeditor5.git",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "lodash": "^4.17.20"
