--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
-    "lodash": "^4.17.20"
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
