--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "lodash": "^4.17.20",
-    "uuid": "^8.3.2"
-    "hammerjs": "^2.0.8",
+    "uuid": "^8.3.2",
+    "hammerjs": "^2.0.8"
   },
   "peerDependencies": {
     "react": "^17.0.1",
