--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
-    "uuid": "^8.3.2",
-    "hammerjs": "^2.0.8"
+    "moments": "0.0.2",
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.1",
