--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-fetch": "^3.0.6",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "moments": "0.0.2",
     "uuid": "^8.3.2"
   },
