--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moments": "0.0.2",
+    "resize-observer": "^1.0.0",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
