--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+
 version: 2
 jobs:
   lint:
@@ -6,40 +7,65 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Lint
-          command:
+          name: Remove node_modules
+          command: rm -rf node_modules/
+      - run:
+          name: Install local dependencies
+          command: |
+            npm install
+      - run:
+          name: Check code quality
+          command: npm run lint
   test:
     docker:
       - image: circleci/node:12.14.1-buster
+    environment:
+      NODE_ENV: test
     steps:
       - checkout
       - run:
-          name: Test
-          command:
+          name: Remove node_modules
+          command: rm -rf node_modules/
+      - run:
+          name: Install local dependencies
+          command: |
+            npm install
+            npm run test
+      - run:
+          name: Run tests
+          command: npm run test
   build:
     docker:
       - image: circleci/node:12.14.1-buster
     steps:
       - checkout
       - run:
-          name: Install local packages
-          command: npm i
+          name: Remove node_modules
+          command: rm -rf node_modules/
       - run:
-          name: Clean lib directory
+          name: Install local dependencies
+          command: |
+            npm install
+            npm install -g json
+      - run:
+          name: Clean dist directory
           command: npm run clean
       - run:
-          name: Build App
+          name: Build app
           command: npm run build
       - run:
-          name: Delete src and babelrc folder
-          command: rm -rf /src .babelrc .gitignore package-lock.json
+          name: Change package name to @storeworkflows/ui-kit
+          command: json -I -f package.json -e "this.name=\"@storeworkflows/ui-kit\""
+      - run:
+          name: Delete unnecessary informations
+          command: rm -rf .storybook/ node_modules/ src/ .circleci/ .idea/ .gitignore package-lock.json build-storybook.log .babelrc
       - persist_to_workspace:
           root: .
           paths:
             - ./
   deploy:
     docker:
-      - image: circleci/node:12.14.1-buster
+      - image: storeworkflows/node:12.14.1-buster-rsync
         auth:
           username: $DOCKER_USER
           password: $DOCKER_PASS
@@ -49,3 +75,24 @@ jobs:
       - run:
           name: Add github.com to known_hosts
           command: mkdir ~/.ssh && echo $GITHUB_PUBLIC_KEY >> ~/.ssh/known_hosts
+      - run:
+          name: Deploy to @storeworkflows/ui-kit
+          command: |
+            git config --global user.name "StoreWorkflow"
+            git config --global user.email "accounting@storeworkflows.com"
+            git clone git@github.com:storeworkflows/ui-kit.git
+            rsync --checksum --recursive --links --exclude=.git --exclude=ui-kit --delete ./ ui-kit
+            cd ui-kit && git add --all && git diff-index --quiet HEAD || git commit --message="Deploy $CIRCLE_BUILD_NUM" && git push --set-upstream origin $CIRCLE_BRANCH
+workflows:
+  version: 2
+  build-test-deploy:
+    jobs:
+      - lint
+      - test
+      - build
+      - deploy:
+          context: storeworkflows
+          requires:
+            - lint
+            - test
+            - build
