--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "watch": "babel --watch src --out-dir lib --source-maps inline --copy-files",
     "build": "babel src --out-dir lib --source-maps false --copy-files",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
