--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           name: Install local dependencies
           command: |
             npm install
-            npm install -g json
+            npm install json
       - run:
           name: Clean dist directory
           command: npm run clean
