--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
       - run: npm install
-      - run: npm run chromatic --project-token=${CHROMATIC_PROJECT_TOKEN}
+      - run: npm run chromatic --project-token=${process.env.CHROMATIC_PROJECT_TOKEN}
 
 workflows:
   chromatic-deploy:
