--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,5 +12,5 @@ jobs:
       - run: npm install
       - uses: chromaui/action@v1
         with:
-          projectToken: ${{ secrets.adc3700c1f52 }}
+          projectToken: ${{ secrets.process.env.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
