--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
               - v1-dependencies-{{ checksum "package.json" }}
               - v1-dependencies-
         - run: npm install
-        - run: npm chromatic --project-token=${CHROMATIC_PROJECT_TOKEN}
+        - run: npm chromatic --project-token=${process.env.CHROMATIC_PROJECT_TOKEN}
 workflows:
   version: 2
   build-test-deploy:
