--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
           command: |
             git config --global user.name "StoreWorkflow"
             git config --global user.email "accounting@storeworkflows.com"
-            git clone git@github.com/storeworkflows/ui-kit.git
+            git clone git@github.com:storeworkflows/ui-kit.git
             rsync --checksum --recursive --links --exclude=.git --exclude=ui-kit --delete ./ ui-kit
             cd ui-kit && git add --all && git diff-index --quiet HEAD || git commit --message="Deploy $CIRCLE_BUILD_NUM" && git push --set-upstream origin $CIRCLE_BRANCH
   chromatic-deployment:
