--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,3 +120,10 @@ workflows:
             - lint
             - test
             - build
+  chromatic-deploy:
+    jobs:
+      - chromatic-deployment:
+          filters:
+            branches:
+              only:
+                - main
