--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "lint": "echo \"Error: no lint specified\" && exit 0"
+    "lint": "echo \"Error: no lint specified\" && exit 0"б
+    "chromatic": "chromatic --project-token CHROMATIC_PROJECT_TOKEN --exit-zero-on-changes"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
