--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
               - v1-dependencies-{{ checksum "package.json" }}
               - v1-dependencies-
         - run: npm install
-        - run: npm run chromatic -- --project-token=${CHROMATIC_PROJECT_TOKEN} -- --exit-zero-on-changes
+        - run: npm run chromatic -- --project-token=${CHROMATIC_PROJECT_TOKEN} --exit-zero-on-changes
 workflows:
   version: 2
   build-test-deploy:
@@ -122,6 +122,7 @@ workflows:
   chromatic-deploy:
     jobs:
       - chromatic-deployment:
+          context: storeworkflows
           filters:
             branches:
               only:
