--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.16",
     "@storybook/addon-info": "^5.3.21",
     "@tinymce/tinymce-react": "^2.6.1",
     "autosize": "^4.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "hammerjs": "^2.0.8",
-    "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moments": "0.0.2",
@@ -60,16 +60,22 @@
     "chromatic": "^5.6.2",
     "css-loader": "^5.2.3",
     "cssnano": "^4.1.10",
+    "fetch-mock": "^9.11.0",
+    "json": "^11.0.0",
     "mini-css-extract-plugin": "^1.5.0",
+    "msw": "^0.28.2",
+    "msw-storybook-addon": "^1.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-docgen": "^5.3.1",
     "react-dom": "^17.0.1",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.10",
     "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "rimraf": "^3.0.2",
-    "json": "^11.0.0"
+    "style-loader": "^2.0.0"
   },
-  "postinstall": "patch-package"
+  "postinstall": "patch-package",
+  "msw": {
+    "workerDirectory": ".storybook"
+  }
 }
