--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "hammerjs": "^2.0.8",
+    "isomorphic-fetch": "^3.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moments": "0.0.2",
