--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-info": "^5.3.21",
     "@tinymce/tinymce-react": "^2.6.1",
     "autosize": "^4.0.2",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "hammerjs": "^2.0.8",
