--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "moments": "0.0.2",
     "patch-package": "^6.4.7",
+    "react-fast-compare": "^3.2.0",
     "resize-observer": "^1.0.0",
     "styled-components": "^5.2.3",
     "uuid": "^8.3.2"
