--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-jest": "^6.2.9",
     "@tinymce/tinymce-react": "^2.6.1",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
@@ -35,9 +36,10 @@
     "build": "npm run clean && babel src --out-dir lib --source-maps false --copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest",
     "lint": "echo \"Error: no lint specified\" && exit 0",
-    "chromatic": "chromatic"
+    "chromatic": "chromatic",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
@@ -54,6 +56,7 @@
     "@storybook/addon-docs": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-storyshots": "^6.2.9",
     "@storybook/addons": "^6.2.8",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.8",
@@ -62,9 +65,15 @@
     "chromatic": "^5.6.2",
     "css-loader": "^5.2.3",
     "cssnano": "^4.1.10",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^27.0.4",
+    "jest-puppeteer": "^5.0.4",
+    "jest-screenshot": "^0.3.2",
     "json": "^11.0.0",
     "mini-css-extract-plugin": "^1.5.0",
     "prop-types": "^15.7.2",
+    "puppeteer": "^10.0.0",
     "react": "^17.0.1",
     "react-docgen": "^5.3.1",
     "react-dom": "^17.0.1",
@@ -78,5 +87,12 @@
   "postinstall": "patch-package",
   "msw": {
     "workerDirectory": ".storybook"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/*.stories.{js,jsx}"
+    ]
   }
 }
