--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "lint": "echo \"Error: no lint specified\" && exit 0",
-    "chromatic": "chromatic",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
+    "chromatic": "chromatic"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.16",
