--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-fast-compare": "^3.2.0",
     "resize-observer": "^1.0.0",
     "styled-components": "^5.2.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "@swf/form-logic-generator": "git+https://github.com/storeworkflows/form-logic-generator.git",
+    "sn-http-request": "^18.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
