--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "@apollo/client": "^3.3.16",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-jest": "^6.2.9",
+    "@swf/form-logic-generator": "git+https://github.com/storeworkflows/form-logic-generator.git",
     "@tinymce/tinymce-react": "^2.6.1",
+    "autoprefixer": "^10.2.6",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
+    "enzyme-to-json": "^3.6.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moments": "0.0.2",
     "patch-package": "^6.4.7",
+    "postcss-color-rebeccapurple": "^6.0.0",
     "react-fast-compare": "^3.2.0",
     "resize-observer": "^1.0.0",
+    "sn-http-request": "^18.0.1",
     "styled-components": "^5.2.3",
-    "uuid": "^8.3.2",
-    "@swf/form-logic-generator": "git+https://github.com/storeworkflows/form-logic-generator.git",
-    "sn-http-request": "^18.0.1"
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.1",
@@ -32,13 +35,15 @@
     "@storybook/addons": "^6.1.14"
   },
   "scripts": {
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json || true",
+    "test": "jest",
+    "prebuild:storybook": "npm run test:generate-output",
     "rename": "json -I -f package.json -e \"this.name=\\\"@storeworkflows/ui-kit\\\"\"",
     "clean": "rimraf lib/*",
     "watch": "babel --watch src --out-dir lib --source-maps inline --copy-files",
     "build": "npm run clean && babel src --out-dir lib --source-maps false --copy-files",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "test": "jest",
+    "build-storybook": "build-storybook -c .storybook -o build/",
     "lint": "echo \"Error: no lint specified\" && exit 0",
     "chromatic": "chromatic"
   },
@@ -57,27 +62,32 @@
     "@storybook/addon-docs": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-storyshots": "^6.2.8",
     "@storybook/addons": "^6.2.8",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.2.8",
+    "@testing-library/react": "^11.2.7",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "chromatic": "^5.6.2",
     "css-loader": "^5.2.3",
     "cssnano": "^4.1.10",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "jest": "^27.0.4",
     "jest-puppeteer": "^5.0.4",
     "jest-screenshot": "^0.3.2",
     "json": "^11.0.0",
     "mini-css-extract-plugin": "^1.5.0",
+    "postcss": "^8.3.5",
     "prop-types": "^15.7.2",
     "puppeteer": "^10.0.0",
     "react": "^17.0.1",
     "react-docgen": "^5.3.1",
     "react-dom": "^17.0.1",
+    "react-test-renderer": "^17.0.2",
     "rimraf": "^3.0.2",
     "sass": "^1.32.10",
     "sass-loader": "^10.1.1",
@@ -91,9 +101,19 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "<rootDir>/src/**/*.{js,jsx}",
+      "src/**/*.{js,jsx}",
       "!**/node_modules/**",
-      "!**/*.stories.{js,jsx}"
+      "!**/*.stories.{js,jsx}",
+      "!src/index.js"
+    ],
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "coverageReporters": [
+      "text"
+    ],
+    "setupFiles": [
+      "<rootDir>/src/jest.setup.js"
     ]
   }
 }
