--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "jest": "^27.0.4",
     "jest-puppeteer": "^5.0.4",
     "jest-screenshot": "^0.3.2",
+    "jsdom": "16.6.0",
     "json": "^11.0.0",
     "mini-css-extract-plugin": "^1.5.0",
     "postcss": "^8.3.5",
@@ -114,6 +115,7 @@
     ],
     "setupFiles": [
       "<rootDir>/src/jest.setup.js"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   }
 }
