--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "patch-package": "^6.4.7",
     "postcss-color-rebeccapurple": "^6.0.0",
     "react-fast-compare": "^3.2.0",
+    "regenerator-runtime": "^0.13.9",
     "resize-observer": "^1.0.0",
     "sn-http-request": "^18.0.1",
     "styled-components": "^5.2.3",
