--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.2.6",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
+    "bootstrap-icons": "^1.5.0",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "enzyme-to-json": "^3.6.2",
