--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-jest": "^6.3.0",
+    "@storybook/addon-jest": "^6.3.6",
     "@swf/form-logic-generator": "git+https://github.com/storeworkflows/form-logic-generator.git",
     "@tinymce/tinymce-react": "^2.6.1",
     "autoprefixer": "^10.2.6",
@@ -58,16 +58,16 @@
     "@babel/plugin-transform-react-jsx": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-controls": "^6.3.0",
-    "@storybook/addon-docs": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
+    "@storybook/addon-actions": "^6.3.6",
+    "@storybook/addon-controls": "^6.3.6",
+    "@storybook/addon-docs": "^6.3.6",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addon-links": "^6.3.6",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-storyshots": "^6.3.0",
-    "@storybook/addons": "^6.2.8",
+    "@storybook/addon-storyshots": "^6.3.6",
+    "@storybook/addons": "^6.3.6",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.3.0",
+    "@storybook/react": "^6.3.6",
     "@testing-library/react": "^11.2.7",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "babel-jest": "^27.0.2",
@@ -93,7 +93,7 @@
     "rimraf": "^3.0.2",
     "sass": "^1.32.10",
     "sass-loader": "^10.1.1",
-    "storybook-addon-designs": "^6.0.0",
+    "storybook-addon-designs": "^6.0.1",
     "storybook-addon-mock": "^0.1.0",
     "style-loader": "^2.0.0"
   },
@@ -117,6 +117,10 @@
     "setupFiles": [
       "<rootDir>/src/jest.setup.js"
     ],
-    "testEnvironment": "jsdom"
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "\\.svg$": "<rootDir>/fileTransformer.js"
+    }
   }
 }
