--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "resize-observer": "^1.0.0",
     "sn-http-request": "^18.0.1",
     "styled-components": "^5.2.3",
+    "typescript": "^4.3.5",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
