--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@tinymce/tinymce-react": "^2.6.1",
     "autoprefixer": "^10.2.6",
     "autosize": "^4.0.2",
-    "prop-types": "^15.7.2",
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.5.0",
     "classnames": "^2.2.6",
@@ -25,7 +24,9 @@
     "moments": "0.0.2",
     "patch-package": "^6.4.7",
     "postcss-color-rebeccapurple": "^6.0.0",
+    "prop-types": "^15.7.2",
     "react-fast-compare": "^3.2.0",
+    "react-lazyload": "^3.2.0",
     "regenerator-runtime": "^0.13.9",
     "resize-observer": "^1.0.0",
     "sn-http-request": "^18.0.1",
