--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@storybook/addon-jest": "^6.3.6",
     "@swf/form-logic-generator": "git+https://github.com/storeworkflows/form-logic-generator.git",
     "@tinymce/tinymce-react": "^2.1.0",
+    "sn-tinymce": "0.0.1",
     "autoprefixer": "^10.2.6",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
