--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,9 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          name: Add github.com to known_hosts
+          command: mkdir ~/.ssh && echo $GITHUB_PUBLIC_KEY >> ~/.ssh/known_hosts
+      - run:
           name: Deploy to @storeworkflows/ui-kit
           command: |
             git config --global user.name "StoreWorkflow"
